<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="image_grid_description">Movie item</string>
    <string name="release_date">2007</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating_label">Average Rating</string>
    <string name="rating_value">Val</string>
    <string name="slash">/</string>
    <string name="movie_poster">Poster Description</string>
    <string name="rate">Your Rate</string>
    <string name="save">SAVE</string>
    <string name="plot_synopsis">Plot Description</string>
    <string name="vote_count">Num</string>
    <string name="popularity_label">Movie Popularity</string>
    <string name="popularity_number">Popularity Rate</string>
    <string name="api_key">000</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">settings</string>
    <string name="sort">Sort</string>
    <string name="sorted_by_rating">sort by rating</string>
    <string name="sorted_by_popularity">sort by popularity</string>

    <string name="most_popular">popular</string>
    <string name="high_rated">top_rated</string>
    <string name="option">option</string>
    <string name="favorite_icon">Add to favorite</string>
    <string name="see_reviews">See Reviews</string>
    <string name="todo">TODO</string>
    <string name="trailer">trailer</string>
    <string name="sorted_by_favorite">favorite</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="lackof_favorite">No film to display :) Read a book</string>
    <string name="textview">TextView</string>
    <string name="review_title">Review Title</string>
    <string name="movie_description">Movie description</string>
</resources>
