<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        tools:context="com.example.katarzkubat.popularmoviesapp.DetailActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="166dp"
            android:layout_height="187dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/ratingValue"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/movieTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/averageRatingLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/rating_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/plotDescription"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/ratingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/rating_value"
            app:layout_constraintBottom_toBottomOf="@+id/voteCount"
            app:layout_constraintStart_toStartOf="@+id/averageRatingLbl" />

        <TextView
            android:id="@+id/plotDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/launchTrailerBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/plot_synopsis" />

        <TextView
            android:id="@+id/voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/vote_count"
            app:layout_constraintBottom_toTopOf="@+id/averageRatingLbl"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/slash"
            app:layout_constraintBottom_toBottomOf="@+id/ratingValue"
            app:layout_constraintEnd_toStartOf="@+id/voteCount"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/ratingValue" />

        <TextView
            android:id="@+id/popularityLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp"
            android:text="@string/popularity_label"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/plotDescription"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/popularityRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/popularityLbl"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            tools:text="@string/popularity_number" />

        <ImageButton
            android:id="@+id/addToFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:background="@android:color/background_light"
            android:contentDescription="@string/favorite_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

        <Button
            android:id="@+id/seeReviewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:padding="2dp"
            android:text="@string/see_reviews"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <Button
            android:id="@+id/launchTrailerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_play_arrow_black_24dp"
            android:text="@string/trailer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"/>


    </android.support.constraint.ConstraintLayout>



</ScrollView>
