<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/movie_poster_favorite_item"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_title_favorite_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_favorite_item"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_date_favorite_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_favorite_item"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_favorite_item"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/movie_description_favorite_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slash"
        tools:text="@string/movie_description" />

    <TextView
        android:id="@+id/movie_rating_favorite_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_favorite_item"
        app:layout_constraintTop_toBottomOf="@+id/movie_date_favorite_item"
        tools:text="@string/vote_count" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_favorite_item"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_favorite_item"
        app:layout_constraintTop_toBottomOf="@+id/movie_date_favorite_item"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/vote_counting_favorite_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/slash"
        app:layout_constraintStart_toEndOf="@+id/slash"
        tools:text="@string/rating_value" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>